# Demo

./: .gitignore
codes/client/: CMakeLists.txt
codes/client/Classes/: TGEngine.h  TGEventDefine.h  TGFrameDispatcher.cpp  TGFrameDispatcher.h  TGMacro.h
codes/client/Classes/app/: AppDelegate.cpp  AppDelegate.h
codes/client/Classes/scene/: TGSceneName.h
codes/client/Classes/scene/menu/: TGSceneMainMenu.cpp  TGSceneMainMenu.h
codes/client/Classes/scenemgr/: TGScene.h  TGSceneManager.cpp  TGSceneManager.h
codes/client/cocos2d/cocos/2d/: libcocos2d.vcxproj
codes/client/cocos2d/cocos/editor-support/spine/proj.win32/: libSpine.vcxproj
codes/client/cocos2d/cocos/platform/win32/: CCFileUtils-win32.cpp
codes/client/framework/: CMakeLists.txt
codes/client/game/: CMakeLists.txt
codes/client/game/cocos/: CMakeLists.txt
codes/client/game/cocos/editor-support/spine/proj.win32/Debug.win32/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.write.1.tlog  lib.command.1.tlog  vc110.idb
codes/client/game/cocos/scripting/lua-bindings/proj.win32/Debug.win32/libluacocos2d/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.write.1.tlog  lib.command.1.tlog
codes/client/game/game/: CMakeLists.txt
codes/client/game/game/app/: AppDelegate.cpp
codes/client/log/: CMakeLists.txt
codes/client/log/include/: VLogger.h  VLoggerInterface.h
codes/client/log/include/service/: VLoggerItem.h  VLoggerService.h  VLoggerTask.h
codes/client/log/source/service/: VLoggerItem.cpp  VLoggerService.cpp  VLoggerTask.cpp
codes/client/platform/: CMakeLists.txt
codes/client/proj.android/: AndroidManifest.xml  local.properties  update_local.bat
codes/client/proj.android/AndroidProject/: AndroidProject.sdf  AndroidProject.sln
codes/client/proj.android/AndroidProject/AndroidProject/: AndroidProject-Debug.vgdbsettings  AndroidProject-Release.vgdbsettings  AndroidProject.vcxproj  AndroidProject.vcxproj.filters  gcc_Release.h
codes/client/proj.android/jni/: Android.mk  Application.mk
codes/client/proj.ios_mac/client.xcodeproj/: project.pbxproj
codes/client/proj.ios_mac/ios/: Info.plist
codes/client/proj.ios_mac/mac/: Info.plist
codes/client/proj.win32/: client.sln  client.vcxproj  client.vcxproj.filters
codes/client/proj.win8.1-universal/: client.sln
codes/client/proj.win8.1-universal/App.Shared/: client.Shared.vcxitems
codes/client/proj.win8.1-universal/App.Windows/: Package.appxmanifest  client.Windows.vcxproj  client.Windows.vcxproj.filters
codes/client/proj.win8.1-universal/App.WindowsPhone/: Package.appxmanifest  client.WindowsPhone.vcxproj
codes/cmake/: ProjectCMakeModule.cmake
codes/common/framework/include/base_param/: VEventParamBuffer.h  VEventParamT1.h  VEventParamT2.h  VEventParamT3.h  VEventParamT4.h  VEventParamT5.h
codes/common/framework/include/core/: VEventDefine.h  VEventHandler.h  VEventMacro.h  VEventManager.h  VEventParam.h  VFramework.h  VInstance.h
codes/common/framework/source/base_param/: VEventParamBuffer.cpp
codes/common/framework/source/core/: VEventHandler.cpp  VEventManager.cpp  VInstance.cpp
codes/common/platform/include/: VMacro.h  VPlatform.h  VSingleton.h  VSystem.h  VType.h  VUInt128.h
codes/common/platform/include/adapter/: IAdapterFactory.h  IApnAdapter.h  IApnAdapterObserver.h  IAudioAdapter.h  IConsoleAdapter.h  IDeviceInfoAdapter.h  IDirAdapter.h  ITimerAdapter.h
codes/common/platform/include/adapter/android/: QGAdapterFactory.h  QGAndroidJNIHelper.h  QGApnAdapter.h  QGAudioEngine.h  QGConsoleAdapter.h  QGSystemFactory.h  QGTimerAdapter.h  VAdapterFactory.h  VAndroidApnManager.h  VApnAdapter.h  VConsoleAdapter.h  VDirAdapter.h
codes/common/platform/include/adapter/ios/: VAdapterFactory.h  VApnAdapter.h  VApnAdapter_iOS.h  VAudioAdapter.h  VConsoleAdapter.h  VDirAdapter.h  VReach.h  VTimerAdapter.h  VTimer_iOS.h
codes/common/platform/include/adapter/unix/: VDirAdapter_Unix.h
codes/common/platform/include/adapter/win32/: VAdapterFactory.h  VApnAdapter.h  VAudioAdapter.h  VConsoleAdapter.h  VDeviceInfoAdapter.h  VDirAdapter.h  VTimerAdapter.h  VTimerContainer.h  stb_vorbis.h
codes/common/platform/include/apn/: IApnObserver.h  VApnManager.h  VApnType.h
codes/common/platform/include/codec/: QGGBKcode.h  VTextCodec.h
codes/common/platform/include/console/: VConsole.h
codes/common/platform/include/device/: VDeviceInfo.h
codes/common/platform/include/io/: VDataStream.h  VDir.h  VFileDataStream.h  VMemoryDataStream.h
codes/common/platform/include/memory/: VObjectAllocator.h  VObjectList.h  VObjectPool.h  VPoolObject.h
codes/common/platform/include/network/: VBufQueue.h  VSocket.h  VSocketType.h
codes/common/platform/include/thread/: IThreadObserver.h  VAutoLock.h  VMutex.h  VThread.h  VWaitCondition.h
codes/common/platform/include/time/: IRunLoopObserver.h  ITimerObserver.h  VDateTime.h  VRunLoop.h  VTimer.h
codes/common/platform/source/: VSystem.cpp
codes/common/platform/source/adapter/Android/: QGAdapterFactory.cpp  QGAndroidApnManager.cpp  QGAndroidJNIHelper.cpp  QGApnAdapter.cpp  QGAudioEngine.cpp  QGConsoleAdapter.cpp  QGDirAdapter.cpp  QGTimerAdapter.cpp  VAdapterFactory.cpp
codes/common/platform/source/adapter/Unix/: VDirAdapter_Unix.cpp
codes/common/platform/source/adapter/iOS/: VApnAdapter.mm  (+8 more)
codes/common/platform/source/apn/: VApnManager.cpp
codes/common/platform/source/audio/: VAudioManager.cpp
codes/common/platform/source/codec/: QGGBKcode.cpp  VTextCodec.cpp
codes/common/platform/source/console/: VConsole.cpp
codes/common/platform/source/device/: VDeviceInfo.cpp
codes/common/platform/source/io/: VDataStream.cpp  VDir.cpp  VFileDataStream.cpp  VMemoryDataStream.cpp
codes/common/platform/source/memory/: VObjectList.cpp  VObjectPool.cpp  VPoolObject.cpp
codes/common/platform/source/network/: VBufQueue.cpp  VSocket.cpp
codes/common/platform/source/thread/: VAutoLock.cpp  VMutex.cpp  VThread.cpp  VWaitCondition.cpp
codes/common/platform/source/time/: VDateTime.cpp  VRunLoop.cpp  VTimer.cpp  VTimerManager.cpp
(+12 files in other folders)
