# CMake entry point
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Demo)

OPTION(DEBUG_MODE "Debug or release?" ON)

IF (WIN32)
	OPTION(BUILD_SHARED_LIBS "Build shared libraries" ON)
ELSE (WIN32)
	OPTION(BUILD_SHARED_LIBS "Build shared libraries" OFF)
ENDIF (WIN32)

# Setup debug or release mode
IF (DEBUG_MODE)
	SET(CMAKE_BUILD_TYPE DEBUG)
ELSE (DEBUG_MODE)
	SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF (DEBUG_MODE)

# Add cmake module path
LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)

INCLUDE(CPack)
INCLUDE(ProjectCMakeModule)

IF (WIN32)
	ADD_DEFINITIONS(-DV_OS_WIN32)
ELSEIF (APPLE)
	ADD_DEFINITIONS(-DV_OS_MACOS)
ENDIF (WIN32)

ADD_SUBDIRECTORY(framework)
